deploy/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy
spec:
  replicas: 1
  template:
    metadata:
      name: deploy
    spec:
      containers:
        - name: static
          image: registry.gitlab.pangolinlabs.cn/uenit/pangolinlab/web/static
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              protocol: TCP
          resources:
            requests:
              cpu: 250m
              memory: 100Mi
            limits:
              cpu: 500m
              memory: 200Mi
      imagePullSecrets:
        - name: regcred
      restartPolicy: Always
  selector:
    matchLabels: {}
