deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
#  selector:
#    app: static
  ports:
    - name: app
      port: 80
      protocol: TCP
      targetPort: 80
  type: ClusterIP
